--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -111,6 +111,7 @@ main {
   height: 3rem;
   border-radius: 0.5rem;
   padding: 0.3rem;
+  cursor: pointer;
 }
 .product-action button:hover{
   color: red;
