--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   
   /* background-image: url(/images/backimg5.jpg);  */
-  background-color: grey;
+  background-color: lightyellow;
      /* Full height */
     height: 100%; 
     /* Center and scale the image nicely */
@@ -26,6 +26,66 @@ code {
 
   /* Direction of the items, can be row or column */
   flex-direction: column;
+}
+
+.sidebarbtn{
+  font-size: 30px;
+  border: none;
+  color: white;
+  padding: 10px;
+  background-color: black;
+   height:100%;
+   cursor: pointer;
+
+}
+.sidebarcon{
+  position: fixed;
+  transform: translateX(-15rem);
+  width: 15rem;
+  background-color: lightyellow;
+  transition: all 0.3s;
+  height:100%;
+}
+
+.openSidebar{
+  transform: translateX(0);
+}
+.sidebarcon a{
+  color: darkblue;
+  font-size: large;
+  padding-bottom: 1rem; 
+  padding-left: 2rem;
+}
+
+.sidebarcon-menu a:hover{
+  background-color: lightgrey; 
+  display: block;
+  color: red;  
+  cursor: pointer; 
+}
+.header3{
+  margin-left: 0.5rem;
+}
+.sidebarcon-menu{
+  list-style-type: none; 
+  display: block; 
+  padding: 0rem;
+
+}
+.sidebarcon-menu li{
+padding-bottom: 0.8rem;
+}
+.button-close{
+  background-color: lightgrey; /* Green */
+  border: none;
+  color: darkblue;
+  padding: .5rem; 
+  text-decoration: none; 
+  font-size: 16px;
+  display: block;
+  float: right;
+  margin-left: -50%;
+  cursor: pointer;
 }
 a{
 
@@ -91,6 +151,10 @@ main {
   margin: 1rem;
   font-size: larger;
   text-align: center;
+  color:blue
+}
+.product-image a h5:hover{ 
+  color:red
 }
 .product-info {
   padding: 2rem; 
@@ -142,3 +206,120 @@ main {
   mix-blend-mode: multiply;
 
 }
+
+.Sign-in-screen, .register-screen {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  flex-direction: column;    
+  border: 0.1rem lightgray solid;
+  border-radius: 0.2rem;
+  height:29rem;
+  
+} 
+.forgot-password a{
+  color:blue
+}
+.forgot-password a:hover{
+  color:red
+}
+ .Sign-in-screen .form-group{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;  
+  justify-content: center; 
+  align-items: center;  
+  margin: 0rem;
+ }
+.register-screen .form-group{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;  
+  justify-content: center; 
+  align-items: center;  
+  margin: 0rem;
+ }
+
+ .form-control{
+   margin-bottom: 1rem;
+   height:1.5rem;
+   width:100%;
+   border-radius: 0.2rem;
+  } 
+
+  .btn-primary{
+    
+    margin-top: 1.5rem;
+    height:2.5rem; 
+    width:10rem;
+    cursor: pointer;
+  }
+  .btn-primary:hover{
+    color:red; 
+  }
+   
+  .container{
+    display: flex;
+    flex-wrap: wrap; 
+  }
+  .collection{ 
+    list-style-type: none;
+  }
+.collection-item-2{
+      border: 0.1rem solid grey; 
+      border-radius: 0.2rem; 
+      font-size:larger
+
+}
+.collection-item{
+      border: 0.1rem solid grey; 
+      border-radius: 0.2rem;
+      padding: 2rem;
+}
+ .waves-effect{
+   padding:1rem;
+   width: 20rem;
+   cursor:pointer;
+ }
+  .waves-effect:hover{
+    color:red;
+    background-color:lightgray
+ }
+  .checkout{  
+    display:block;
+    width:20rem;
+    padding-left:4rem;
+    margin:2rem; 
+    padding-top: 2rem;
+  
+  }
+  .button-primary{
+    height: 2.5rem;
+    font-size: medium;
+    cursor: pointer;
+    background-color:goldenrod;
+    margin-top: 1rem;   
+    width: 20rem;
+  }
+  .button-primary:hover{
+    color:red;
+  }
+  .cart-name{
+    color: darkblue;
+    padding-bottom: 1rem;
+  }
+  .cart-name a{
+    color: darkblue;
+    font-size: large;
+   }
+  .cart-sub-name{
+    padding-bottom: 1rem;
+  }
+  .cart-name a:hover{
+    color:red;
+  }
+
+  .cart-quantity{
+    width:2.5rem;
+    height:2rem;
+  }
