--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -243,8 +243,7 @@ a:hover{
    border-radius: 0.2rem;
   } 
 
-  .btn-primary{
-    
+  .btn-primary{ 
     margin-top: 1.5rem;
     margin-bottom:1.7rem;
     height:3rem; 
@@ -254,13 +253,26 @@ a:hover{
   .btn-primary:hover{
     color:red; 
   }
-   
-  .container{
+  .container-main{
     display: flex;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
   }
+   .container{
+     display: flex;
+     flex-wrap: wrap;
+   }
+ 
   .collection{ 
-    list-style-type: none;
+    list-style-type: none; 
+  }
+  li {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+  li img{
+    width: 200px;
+    height: 200px;
   }
   .collection-item-2{
       border: 0.1rem solid grey; 
@@ -268,20 +280,18 @@ a:hover{
       font-size:larger
 
 }
+.description{
+  width: 1160px; 
+}
 .collection-item{
       border: 0.1rem solid grey; 
       border-radius: 0.2rem;
       padding: 2rem;
 }
  .waves-effect{
-   padding:1rem;
-   width: 20rem;
+    width: 20rem;
    cursor:pointer;
- }
-  .waves-effect:hover{
-    color:red;
-    background-color:lightgray
- }
+ } 
   .checkout{  
     display:block;
     width:20rem;
@@ -319,4 +329,124 @@ a:hover{
   .cart-quantity{
     width:2.5rem;
     height:2rem;
+  }
+
+  .row {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+    margin: 0 -16px;
+  }
+  
+  .col-25 {
+    -ms-flex: 25%; /* IE10 */
+    flex: 25%;
+  }
+  
+  .col-50 {
+    -ms-flex: 50%; /* IE10 */
+    flex: 50%;
+  }
+  
+  .col-75 {
+    -ms-flex: 75%; /* IE10 */
+    flex: 75%;
+  }
+  
+  .col-25,
+  .col-50,
+  .col-75 {
+    padding: 0 16px;
+  }
+  
+  .container1 {
+    background-color: #f2f2f2;
+    padding: 5px 20px 15px 20px;
+    border: 1px solid lightgrey;
+    border-radius: 3px;
+  }
+  
+  input[type=text] {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+  }
+  
+  label {
+    margin-bottom: 10px;
+    display: block;
+  }
+  
+  .icon-container {
+    margin-bottom: 20px;
+    padding: 7px 0;
+    font-size: 24px;
+  }
+  
+  .btnn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px;
+    margin: 10px 0;
+    border: none;
+    width: 100%;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 17px;
+  } */
+  
+   .btnn:hover {
+    background-color: #45a049;
+  }
+  
+  span.price {
+    float: right;
+    color: grey;
+  }
+  
+  /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
+  @media (max-width: 800px) {
+    .row {
+      flex-direction: column-reverse;
+    }
+    .col-25 {
+      margin-bottom: 20px;
+    }
+  }
+
+  .main1{
+    display: flex; 
+    flex-wrap: wrap;
+    margin: 1rem; 
+  }
+  .main-1-border img{
+    border: 0.1rem solid grey;
+    margin-bottom: 1rem;
+    margin-right: 2rem;
+  }
+  .main2{
+    display: block;
+    margin-left:4rem ;
+  }
+  .btn-xl{
+    display: block;
+    margin-left: 4rem;
+    font-size: large;
+  }
+
+  .all-image{
+    width:350px;
+    height:350px;
+  }
+
+  .main-container{ 
+    display: block;
+    margin: auto; 
+    margin-top: 10rem;
+    width: 50%;
+    border: 3px solid gray;
+    padding: 10px;
   }
