--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -260,8 +260,16 @@ a:hover{
    .container{
      display: flex;
      flex-wrap: wrap;
-   }
- 
+   } 
+   .description {
+    font-size: 18px;
+  }
+   @media screen and (max-width: 600px) {
+    /* For mobile phones: */
+    .description {
+      font-size: 21px;
+    }
+  }
   .collection{ 
     list-style-type: none; 
   }
@@ -279,10 +287,7 @@ a:hover{
       border-radius: 0.2rem; 
       font-size:larger
 
-}
-.description{
-    width: 1160px; 
-}
+} 
 .collection-item{
     display: flex;
     flex-direction: row;
